# AnkiMandarin

./: .gitignore  LICENSE  README.md  commands.txt  pyproject.toml  requirements.txt
Dictionary/MoeDict/: index.json  term_bank_1.json  term_bank_10.json  term_bank_11.json  term_bank_12.json  term_bank_13.json  term_bank_14.json  term_bank_15.json  term_bank_16.json  term_bank_17.json  term_bank_18.json  term_bank_19.json  term_bank_2.json  term_bank_20.json  term_bank_21.json  term_bank_22.json  term_bank_23.json  term_bank_24.json  term_bank_25.json  term_bank_26.json  term_bank_27.json  term_bank_28.json  term_bank_29.json  term_bank_3.json  term_bank_30.json  term_bank_31.json  term_bank_32.json  term_bank_33.json  term_bank_34.json  term_bank_35.json  term_bank_36.json  term_bank_37.json  term_bank_38.json  term_bank_39.json  term_bank_4.json  term_bank_5.json  term_bank_6.json  term_bank_7.json  term_bank_8.json  term_bank_9.json
Dictionary/MoeDict/__MACOSX/: ._index.json  ._term_bank_1.json  ._term_bank_7.json
Dictionary/Xiandai/: index.json  term_bank_0.json  term_bank_1.json  term_bank_2.json  term_bank_3.json  term_bank_4.json  term_bank_5.json  term_bank_6.json  term_bank_7.json
Local/: TestingGrounds.ipynb  local_run
Output/: mandarin_flashcards.apkg
anki_mandarin/: AnkiAutoCards.py  SimpleExample.py  __init__.py  local_run.py
anki_mandarin/mkv_subs/: __init__.py  convert_subtitles.py  mkv_sub_extractor.py  mkv_sub_utils.py  subs_main.py
anki_mandarin/utils/: __init__.py  anki_utils.py  language_utils.py  load_utils.py
(+10 files in other folders)
