[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anki_mandarin"
version = "1.0.0"
description = "Automating the creation of Mandarin Anki cards from words and example sentences."
authors = [
    {name = "Gabriel Agerholm Ruge", email = "gabrielruge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cedict-utils>=0.0.13",
    "charset-normalizer>=3.4.7",
    "genanki>=0.13.1",
    "googletrans>=4.0.2",
    "pypinyin>=0.55.0",
]

[tool.setuptools]
packages = ["anki_mandarin"]
